# aith

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  devenv.nix  dist-workspace.toml  flake.nix
.github/workflows/: ci.yml  crates.yml  npm.yml  release.yml
docs/: releasing.md
src/: cli.rs  doctor.rs  lib.rs  main.rs  paths.rs  profiles.rs  tools.rs
src/profiles/: env_profile.rs  fs.rs  mod.rs  store.rs  types.rs  validation.rs
src/tools/: claude.rs  codex.rs  cursor.rs  desktop.rs  env_session.rs  mod.rs
tests/: codex_profiles.rs
