[package]
name = "aith"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "Account profile switching for AI coding tools"
license = "Apache-2.0"
authors = ["Sadjow Medeiros Leão"]
homepage = "https://github.com/sadjow/aith"
repository = "https://github.com/sadjow/aith"
readme = "README.md"
keywords = ["ai", "auth", "cli", "profiles", "codex"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
